--- a/public/assets/locales/ua/translation.json
+++ b/public/assets/locales/ua/translation.json
@@ -32,7 +32,7 @@
     "loginform__login": "Увійти",
     "loginform__registration": "Зареєструватися",
     "user-about-salesman": "Кабінет продавця",
-    "user-about-byer": "Кабінет покупця",
+    "user-about-buyer": "Кабінет покупця",
     "btn-logout": "Вийти"
   },
   "navbar": {
